--- a/examples/lazintfimage/mainunit1.lfm
+++ b/examples/lazintfimage/mainunit1.lfm
@@ -1,49 +1,50 @@
 object Form1: TForm1
+  Left = 291
+  Height = 541
+  Top = 163
+  Width = 498
+  HorzScrollBar.Page = 497
+  VertScrollBar.Page = 540
+  ActiveControl = Button1
   Caption = 'Fade in - Example for TLazIntfImage'
   ClientHeight = 541
   ClientWidth = 498
   OnCreate = Form1Create
   OnDestroy = Form1Destroy
-  PixelsPerInch = 75
-  HorzScrollBar.Page = 497
-  VertScrollBar.Page = 540
-  Left = 291
-  Height = 541
-  Top = 163
-  Width = 498
+  PixelsPerInch = 96
   object Button1: TButton
-    Anchors = [akBottom]
-    BorderSpacing.OnChange = nil
-    Caption = 'Fade in'
-    OnClick = Button1Click
-    TabOrder = 0
     Left = 85
     Height = 25
     Top = 466
     Width = 328
+    Anchors = [akBottom]
+    BorderSpacing.InnerBorder = 2
+    Caption = 'Fade in'
+    OnClick = Button1Click
+    TabOrder = 0
   end
   object Button2: TButton
-    Anchors = [akBottom]
-    Caption = 'Rotate by >>'
-    OnClick = Button2Click
-    TabOrder = 1
     Left = 87
     Height = 25
     Top = 498
     Width = 324
+    Anchors = [akBottom]
+    BorderSpacing.InnerBorder = 2
+    Caption = 'Rotate by >>'
+    OnClick = Button2Click
+    TabOrder = 1
   end
   object Edit1: TEdit
-    BorderSpacing.OnChange = nil
+    AnchorSideLeft.Control = Button2
+    AnchorSideTop.Control = Button2
+    AnchorSideTop.Side = asrCenter
+    Left = 97
+    Height = 23
+    Top = 499
+    Width = 32
     BorderSpacing.Left = 5
     BorderSpacing.Around = 5
     TabOrder = 2
     Text = '90'
-    AnchorSideLeft.Control = Button2
-    AnchorSideTop.Control = Button2
-    AnchorSideTop.Side = asrCenter
-    Left = 421
-    Height = 23
-    Top = 499
-    Width = 32
   end
 end
