started Quick Fix menu items
 SVN 8780@trunk

--- a/ide/msgview.lfm
+++ b/ide/msgview.lfm
@@ -25,6 +25,7 @@ object MessagesView: TMessagesView
     Width = 722
   end
   object MainPopupMenu: TPopupMenu
+    OnPopup = MainPopupMenuPopup
     left = 46
     top = 41
   end
